    close copy read file on error
    handle progress gt 100%
    remove deadlock on quick dir change
    new swedish translation partially completed (40%)
    task manager Path column renamed Folder
    ellipsize Folder, Item, To task manager columns
    always enable Root submenu in devices
    set font new/rename file dialogs Target Template entries
0.7.8   2012-06-16:
    use/update mimeapps.list over defaults.list closes #71
    added design mode on mime apps opens MIME menu
    deprecated MimeType x-directory removed from spacefm desktop files
    new archive save dialog uses literal filename and extension fixes #82
    accept options in terminal program setting
    added user manual MIME Menu section
    accept network urls
    mount iso files from Open context menu; auto-mount iso
    added Root|Edit udevil.conf to devices menu
    allow edit bookmark to network URL
    corrected Click runs executables pref not saved fixes #84
    auto-unmount removed media and devices
    support xfce terminal
    improve new file/folder/link dialog
    change deprecated gdk_pixbuf_ref to g_object_ref
    don't remove .gz file when extracting closes #90
    CLI added -r, --reuse-tab  Open folder in current tab of last used window
    corrected non-translatable strings pulls #100 fixes #88
    new french translation complete
    no cancel sel on desktop right-click in single-click mode fixes #76
    dont open pipes for mime type even if size > 0 closes #80
    mouse buttons 8 and 9 on file list go back and forward (like 4 and 5)
    fixes extract multiple zip,7z,rar files
    changed File Name Contains: to Filename: in File Search fixes #86
    corrected duplicated menu key shortcuts fixes #92
    error on missing edit udevil.conf fixes #98
    sync new file open; select new closes #35
0.7.7   2012-05-27:
    escape mount point in dev props scripts fixes #70
    fixed File|File Search keybinding
    extract zip, rar, 7z in terminal for output & password prompt fixes #72