@@ -12,6 +12,7 @@
     ellipsize Folder, Item, To task manager columns
     always enable Root submenu in devices
     set font new/rename file dialogs Target Template entries
+    give errors accessing directories
 0.7.8   2012-06-16:
     use/update mimeapps.list over defaults.list closes #71
     added design mode on mime apps opens MIME menu
